# ChangeLog for app-antivirus/clamav
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.308 2008/09/13 22:48:04 dertobi123 Exp $

  03 Jul 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> +files/clamav-0.95.1-nls.patch,
  +clamav-0.95.2.ebuild:
  Imported most of clamav-0.95.2 from Portage.

  01 Jul 2009; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> -clamav-0.94.1.ebuild,
  -files/clamav-0.94.1-buildfix.patch, -files/clamav-0.94.1-nls.patch,
  -files/clamav-0.94.1rc1-buildfix.patch, -files/clamav-0.94.1rc1-nls.patch:
  Removing clamav-0.94.1

  02 May 2009; Nathan Phillip Brink <ohnobinki@gentoo.org>
  -clamav-0.94.1_rc1.ebuild:
  Removing old clamav-0.94.1_rc1.


  02 May 2009; Nathan Phillip Brink <ohnobinki@gentoo.org>
  clamav-0.94.1_rc1.ebuild, clamav-0.94.1.ebuild, clamav-0.94.2.ebuild,
  clamav-0.94.2-r1.ebuild:
  Fixed automagic depenency on gmp and [R]DEPEND syntax, reset KEYWORDS.

  27 Dec 2008; Nathan Brink <ohnobinki@ohnopublishing.net> files/clamd.rc:
  Added "provide milter" to the init-script. Maybe this should be a conditional provide statement based on whether or not the milter is enabled or not.

  30 Nov 2008; Nathan Brink <ohnobinki@ohnopublishing.net> clamav-0.94.2-r1.ebuild:
  In response to Gentoo bug #249231 : pulls in changes to files/clamd.rc

  30 Nov 2008; Nathan Brink <ohnobinki@ohnopublishing.net> clamav-0.94.2.ebuild:
  In response to bump for Gentoo bug #248798

  13 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org> clamav-0.94.ebuild:
  Add missing buildtime dep on dev-util/pkgconfig, #237552

  08 Sep 2008; Brent Baude <ranger@gentoo.org> clamav-0.94.ebuild:
  Marking clamav-0.94 ppc64 and ppc for bug 236665

  08 Sep 2008; Raúl Porcel <armin76@gentoo.org> clamav-0.94.ebuild:
  ia64 stable wrt #236665

  07 Sep 2008; Friedrich Oslage <bluebird@gentoo.org> clamav-0.94.ebuild: