@@ -2,14 +2,18 @@ AUX clamav-0.94.2-buildfix.patch 845 RMD160 54d738e61fcae762c9e1445601845824f29d
 AUX clamav-0.94.2-nls.patch 2429 RMD160 0b1b54ade225791b3fada186dd60546fb4ebf1b9 SHA1 6368b108ea7932c5f0b75069f89ad861c8285e3b SHA256 0fd8c2a11d56685f88c8fddef446294df5e2c3f123682ebd652a0e948a1a8158
 AUX clamav-0.95.1-nls.patch 319 RMD160 403558e6e71e620da2092f80d1d5b450281cb468 SHA1 2ae10843856aa6d7fd9a42e92b8685a6e9e14fbf SHA256 7bba0e938ae577b2b338f1b48f0173a8ec7e3b6785893319fd044d77847d03ba
 AUX clamav-milter.README.gentoo 1124 RMD160 4fb1e2d9b444874838bcea1071969ca6862fb15b SHA1 0b9b86a0e7732eaaf7f880859265754f7a4efd3a SHA256 5e7b142b68964bc3463b077e5698fa77cace45ea9612258b1e1849cee944dd11
+AUX clamav-milter.conf 166 RMD160 f14a4f94686862e5f92c2855c4f14e783609fbf9 SHA1 4c9d72f21b9ea2a804ded9bab41a3c9c49ff4bbd SHA256 7271da5d23d8b9cfbb0990c926a9a410988f6b15b6b966d992bb2f43a2350b43
+AUX clamav-milter.rc 2162 RMD160 f9c67517dd916653a85baa34ced0ed917190c2d2 SHA1 6bd00082bda0195e4b22b1e30c2d666bda67caf1 SHA256 e7a206184d3eba81b3669aa6ed372b0140cfa78a64e34a68389eeed2b7496c2c
 AUX clamav.logrotate 355 RMD160 f59cd8ce96da8210aa858ee59ee3b6940e3253a6 SHA1 5fbd9364997400681d5a93cb50cac8a0f188e56f SHA256 ab91f784d5098d2162be9277e3a006bdb392d9d89975838ad4ac7dfd8b418170
-AUX clamd.conf 234 RMD160 b517b05e587637cbdd443f7ca3625d582e32722f SHA1 564b1e2f6cf85567f69f2e20cbc942967fa6304b SHA256 17bf4fe3596dc5b145e4163d85181e2edcaa214df3cf9072d852ba0e7a569891
-AUX clamd.rc 3825 RMD160 09da23ab2c5ebc7eac4f6f8feaff722e0658ac73 SHA1 073d4535a446d2a309d1503d2cb16ec97d572a02 SHA256 8253fb1a236b3346c1035b4fdc03597dbc44a170d4f871fab1ad2d17c1f355ce
+AUX clamd.conf 55 RMD160 2ffd4914654469ee0178ebd33b6c8753b691f90a SHA1 4e7df38ed3fb0a76ca3dc49d65d5d4846a759a94 SHA256 3e6d26f3cc0b8b33b990de47bdb856e0651e69150ef803d4b0bb60fdb2506fd8
+AUX clamd.rc 1746 RMD160 0158e536289796660479e0aed28ff002b4054923 SHA1 3edad93b30164d7eaa5021daa699f65c7a99dc48 SHA256 d897b1425f21af30ccc6c2f3e0720dabd90271ba66cec483d1aecde4c779c4e0
+AUX freshclam.conf 64 RMD160 39f5a64cadb0f766605b62a2019303b0ef6b0a36 SHA1 8d112cd09865174b7fc96ff4f415c881eab902e1 SHA256 95b8c1aed21f8eafe911d3c8f21a57b1212f7abeb8de32d29aa3cb9248c17c3b
+AUX freshclam.rc 1070 RMD160 cdd42aa9b9999e3c53e3f28443fb0bdf024c426f SHA1 9fc65761d9d9dbb8565d9abb5e634d73304ceede SHA256 436ddaf181cfb3bc84ad6f7a1858fbb5353ad079405016094b4fc0008b7ce28c
 AUX lib-ld.m4 3417 RMD160 7b412510e7ef9966f70ed29937e3556283128a9b SHA1 8b72b8f5f76e41e4ca0f2521c06c568490894a84 SHA256 18c4c458009da32c9daf0ea332a539e5edc82ba009b6c2faac004626313f00e5
 DIST clamav-0.94.2.tar.gz 22107637 RMD160 ae75e5f546f96b7fd0f76dcf9f4977ec95ba4dba SHA1 82373d25db8b836fd88b2414df43bb0c7192cced SHA256 1aec7fecff375958d067aceeb9782d3ff0be7c13bed0eecf6240fb089f8d268c
 DIST clamav-0.95.2.tar.gz 25137010 RMD160 83cab51c224251316288e4c3189ba91f640e9f82 SHA1 7544b39d84f2233b984a9c2ce3ef74d407add483 SHA256 f5f2a5a9984fd1ade69a7c2cc78da2f5dc0c505f94ab58fb2aa6613399ab1c56
 EBUILD clamav-0.94.2-r1.ebuild 5231 RMD160 4939f79b9dc95fa5cab9f5fac5b8761b508c1e43 SHA1 51f5c97a1474eac6f047148f2a6186ce033d1587 SHA256 8486b04ae3e7fe955a3c1da76d33e7db1c56b13025235b86947f0909a58192bd
 EBUILD clamav-0.94.2.ebuild 5231 RMD160 4939f79b9dc95fa5cab9f5fac5b8761b508c1e43 SHA1 51f5c97a1474eac6f047148f2a6186ce033d1587 SHA256 8486b04ae3e7fe955a3c1da76d33e7db1c56b13025235b86947f0909a58192bd
-EBUILD clamav-0.95.2.ebuild 4111 RMD160 1c962a178dc749569835f56b948468153a7b26b8 SHA1 cf0bb9c093d6c6aff0b0f0aefa8fc84e4a0ffca7 SHA256 25ef28025a0b05baa0422386df8cf236d9c9d6eea3c6647f26d575d58f0c198a
-MISC ChangeLog 48135 RMD160 47d22809de95395fef0c49e6e784c923d76d3186 SHA1 5fd4b9df58eb5eb54862aa573b9152957bacc30b SHA256 f971d458143b2424f1ae31473b14fa11077e31bd0c4f8955b8aaf1596b503b1a
-MISC metadata.xml 184 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 SHA1 cc0a188d9ad2411e78747326c62dd046bd5413c8 SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58
+EBUILD clamav-0.95.2.ebuild 4363 RMD160 e4d089f72a56fd09022bbd794b380def005bab0a SHA1 8a75afedb78cd01fcf3c4598d1ff18e85abd61e7 SHA256 3604c4464785ae13c33e71e41873ba24218de724c89c92c0c0991b669934a345
+MISC ChangeLog 48642 RMD160 99b8db68505b988dbc293ecc387097cd7c2cbb35 SHA1 d136107934968e3a37119ab5bc2b19be4a8395ca SHA256 eb09dc8763074169b3dd6c6221938deb168a5d3fe2e962e910186583a39a0b71
+MISC metadata.xml 320 RMD160 3546393e30d87f0b0a2fb17e2f15f57dd8c19661 SHA1 b959e38933418e6fc818ed40cd9a4921b8c66102 SHA256 e2a8c4c8bedbffe50a126c1c7395a4d92652c2d95347b9496d54aea1f230a22d
