@@ -1,0 +1,6 @@
+# Config file for /etc/init.d/clamav-milter
+
+MILTER_NICELEVEL=3
+
+# Set if you have a nonstandard path to clamav-milter.conf
+#MILTER_CONF_FILE=/etc/clamav-milter.conf
