@@ -1,9 +1,3 @@
 # Config file for /etc/init.d/clamd
 
-# NOTICE: Since clamav-0.85-r1, only START_CLAMD and START_FRESHCLAM settings
-#	  are used, other are silently ignored
-
-START_CLAMD=yes
-START_FRESHCLAM=yes
 CLAMD_NICELEVEL=3
-FRESHCLAM_NICELEVEL=19
