@@ -1,0 +1,3 @@
+# Config file for /etc/init.d/freshclam
+
+FRESHCLAM_NICELEVEL=19
