@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>net-mail</herd>
-<herd>antivirus</herd>
+  <herd>net-mail</herd>
+  <herd>antivirus</herd>
+  <use>
+    <flag name="clamdtop">A Top like tool which shows what clamd is currently scanning amongst other things</flag>
+  </use>
 </pkgmetadata>
