@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.308 2008/09/13 22:48:04 dertobi123 Exp $
 
+  13 Jul 2009; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> clamav-0.95.2.ebuild,
+  +files/clamav-milter.conf, +files/clamav-milter.rc, files/clamd.conf,
+  files/clamd.rc, +files/freshclam.conf, +files/freshclam.rc, metadata.xml:
+  Fixed clamav-0.95.2.ebuild from Portage. Made initscripts modular.
+
   03 Jul 2009; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> +files/clamav-0.95.1-nls.patch,
   +clamav-0.95.2.ebuild:
